tree-sitter-lute/test/corpus/basic.txt
==================
directive with attrs
==================
::camera{focus="x" wait="true"}
---
(source_file (directive (ident) (attrs (attr (key) (string)) (attr (key) (string)))))

==================
body `# title` heading is not a node (dsl 0.37.0 §3.1: frontmatter `title:` only)
:error
==================
# S01EP02 — Behold the Performance
---

==================
section heading with stable id suffix (dsl 0.37.0 §3.1)
==================
## Section 1. {#opening}
@narrator: A hostess walked over.
---
(source_file (section (heading) (section_id) (line (speaker) (text))))

==================
heading `{` that is not an id suffix stays heading text
==================
## Braces {not an id}
---
(source_file (section (heading)))

==================
section heading
==================
## Section 1.
---
(source_file (section (heading)))

==================
line with attrs
==================
@marina{code="0010" emotion="surprised" variant="0"}: Oh!
---
(source_file (line (speaker) (attrs (attr (key) (string)) (attr (key) (string)) (attr (key) (string))) (text)))

==================
line without attrs (opaque text)
==================
@narrator: Venny's. (`<`, `?`, `:` here are content, not structure.)
---
(source_file (line (speaker) (text)))

==================
staging directive leaf (no attrs)
==================
::pause
---
(source_file (directive (ident)))

==================
directive with bare-bool attr
==================
::camera{framing="close" wait}
---
(source_file (directive (ident) (attrs (attr (key) (string)) (attr (key)))))

==================
directive with ref-valued attr
==================
::gate{guard=@fond when=@unlocked(scene.x)}
---
(source_file (directive (ident) (attrs (attr (key) (ref)) (cel_attr (cel_key) (ref)))))

==================
set assignment
==================
::set{scene.flags.saw_beam = true}
---
(source_file (set (path) (assign_op) (cel_expr)))

==================
set compound assignment
==================
::set{scene.affect.marina += 1}
---
(source_file (set (path) (assign_op) (cel_expr)))

==================
branch and choice (nesting)
==================
<branch id="number">
  <choice id="blunt" text="Just ask, flatly">
    @fixer{code="0050"}: Marina. Your number.
    ::set{scene.affect.marina += 1}
  </choice>
</branch>
---
(source_file
  (branch
    (attr (key) (string))
    (choice
      (attr (key) (string))
      (attr (key) (string))
      (line (speaker) (attrs (attr (key) (string))) (text))
      (set (path) (assign_op) (cel_expr)))))

==================
match / when / otherwise (nesting)
==================
<match subject="scene.choices.number">
  <when test="@fond">
    @fixer{mono}: Asked nicely.
  </when>
  <when test="$ == 'blunt'">
    @fixer{mono}: Asked flatly.
  </when>
  <otherwise>
    @fixer{mono}: Somewhere this evening.
  </otherwise>
</match>
---
(source_file
  (match
    (cel_attr (cel_key) (cel_string (path)))
    (when (cel_attr (cel_key) (cel_string (ref))) (line (speaker) (attrs (attr (key))) (text)))
    (when (cel_attr (cel_key) (cel_string)) (line (speaker) (attrs (attr (key))) (text)))
    (otherwise (line (speaker) (attrs (attr (key))) (text)))))

==================
timeline / track (nesting, directive + set clips)
==================
<timeline duration="1.4">
  <track subject="camera">
    ::camera{focus="marina" framing="close" duration="0.4"}
    ::camera{move="shake" at="0.5"}
  </track>
  <track channel="sfx">
    ::sfx{sound="flash" at="0.5"}
    ::set{scene.flags.saw_beam = true}
  </track>
</timeline>
---
(source_file
  (timeline
    (attr (key) (string))
    (track
      (attr (key) (string))
      (directive (ident) (attrs (attr (key) (string)) (attr (key) (string)) (attr (key) (string))))
      (directive (ident) (attrs (attr (key) (string)) (attr (key) (string)))))
    (track
      (attr (key) (string))
      (directive (ident) (attrs (attr (key) (string)) (attr (key) (string))))
      (set (path) (assign_op) (cel_expr)))))

==================
comment is trivia (standalone + trailing)
==================
/* a standalone comment */
::camera{focus="x"} /* trailing comment */
---
(source_file
  (comment)
  (directive (ident) (attrs (attr (key) (string))))
  (comment))

==================
multi-line comment is trivia
==================
/*
  spanning
  several lines
*/
::music{playback="stop"}
---
(source_file
  (comment)
  (directive (ident) (attrs (attr (key) (string)))))

==================
frontmatter (opaque YAML body) then section
==================
---
mode: inline
character: marina
title: S01EP02 — Behold the Performance
monoSpeakers: [marina]
---

## Section 1. {#s01}
----------------------------------------
(source_file (frontmatter) (section (heading) (section_id)))

==================
frontmatter with nested YAML then section
==================
---
profile: date-minigame
plugins:
  arcia.minigame:
    resultScope: scene
    allowedKinds: [rhythm]
state:
  scene.affect.marina: { type: number, default: 0 }
---

## Section 1.
::minigame{kind="rhythm" wait="true"}
----------------------------------------
(source_file
  (frontmatter)
  (section
    (heading)
    (directive (ident) (attrs (attr (key) (string)) (attr (key) (string))))))
