tree-sitter-lute/test/corpus/highlight.txt
==================
three layers in one section (content + staging + logic)
==================
## Section 1.
::camera{focus="marina" framing="medium"}
@narrator: A hostess walked over.
::set{scene.affect.marina += 1}
---
(source_file
  (section
    (heading)
    (directive (ident) (attrs (attr (key) (string)) (attr (key) (string))))
    (line (speaker) (text))
    (set (path) (assign_op) (cel_expr))))

==================
bare @ref attribute values (reference tag targets)
==================
::gate{guard=@fond when=@unlocked(scene.x)}
---
(source_file
  (directive (ident) (attrs (attr (key) (ref)) (cel_attr (cel_key) (ref)))))

==================
logic branch/choice with nested content + set
==================
<branch id="number">
  <choice id="soft" text="Ask gently">
    @fixer: Your number?
    ::set{scene.affect.marina += 1}
  </choice>
</branch>
---
(source_file
  (branch
    (attr (key) (string))
    (choice
      (attr (key) (string))
      (attr (key) (string))
      (line (speaker) (text))
      (set (path) (assign_op) (cel_expr)))))

==================
timeline/track staging block
==================
<timeline duration="1.4">
  <track subject="camera">
    ::camera{framing="close"}
  </track>
</timeline>
---
(source_file
  (timeline
    (attr (key) (string))
    (track
      (attr (key) (string))
      (directive (ident) (attrs (attr (key) (string)))))))
