tree-sitter-lute/test/corpus/lore.txt
==================
lore document with two top-level entries (dsl 0.19.0 §2)
==================
---
kind: lore
uses: ../world.schema.yaml
title: Ship's records
---

<entry id="scientistLog1" target="item.torn_note_1" category="note" series="scientistLog" order="1" title="Research log, day 3">
  @scientist: Day three. Subject E does not respond to light.
  ::assert{knows(vesna, project_lumen)}
</entry>

<entry id="rustyKey" target="item.rusty_key" category="item" when="entry.scientistLog1.read">
  <match subject="run.labBurned">
    <when is="true">
      @narrator: A scorched key. Someone's name has melted into the grip.
    </when>
    <otherwise>
      @narrator: A rusty key, stamped "Research wing B2".
    </otherwise>
  </match>
</entry>
----------------------------------------

(source_file
  (frontmatter)
  (entry
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (line (speaker) (text))
    (assert (fact_pattern (ident) (fact_arg (ident)) (fact_arg (ident)))))
  (entry
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (cel_attr (cel_key) (cel_string (path)))
    (match
      (cel_attr (cel_key) (cel_string (path)))
      (when
        (when_is (when_key) (when_pattern (when_literal)))
        (line (speaker) (text)))
      (otherwise
        (line (speaker) (text))))))

==================
lore document with a top-level beat bundle (dsl 0.23.0 §4)
==================
---
id: ship.records
kind: lore
---

<entry id="rustyKey" target="item.rusty_key">
  @narrator: A rusty key.
</entry>

<beat id="dockTalk" on="talk" target="npc.dockhand" title="Ask about the ship" priority="2" once="user" also when="run.docked">
  @dockhand: She came in last night.
  <branch id="ask">
    <choice id="more" text="Tell me more">
      @dockhand: Nobody got off.
    </choice>
  </branch>
  ::set{run.askedDock = true}
</beat>
----------------------------------------

(source_file
  (frontmatter)
  (entry
    (attr (key) (string))
    (attr (key) (string))
    (line (speaker) (text)))
  (beat
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (attr (key))
    (cel_attr (cel_key) (cel_string (path)))
    (line (speaker) (text))
    (branch
      (attr (key) (string))
      (choice
        (attr (key) (string))
        (attr (key) (string))
        (line (speaker) (text))))
    (set (path) (assign_op) (cel_expr))))

================================================================================
beat template uses (dsl 0.27.0 §6)
================================================================================
---
kind: lore
id: bonds
components: [bond.lute]
---

<beat use="bondStory" id="ariaR2" hero="aria" rank="r2">
  @aria: Thank you.
</beat>

<beat use="trainer" id="r3Joey" who="joey"/>
--------------------------------------------------------------------------------

(source_file
  (frontmatter)
  (beat
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))
    (line (speaker) (text)))
  (beat
    (attr (key) (string))
    (attr (key) (string))
    (attr (key) (string))))
