tree-sitter-lute/test/corpus/quest.txt
==================
quest with objective and on (nesting parity with branch/match)
==================
<quest id="rescueHalsin">
  <objective id="reachGrove" done="run.region == 'grove'">
    @narrator: You made it to the grove.
  </objective>
  <on event="questComplete">
    ::set{user.xp += 300}
  </on>
</quest>
---
(source_file
  (quest
    (attr (key) (string))
    (objective
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path)))
      (line (speaker) (text)))
    (on
      (attr (key) (string))
      (set (path) (assign_op) (cel_expr)))))

==================
self-closing objective (empty body, dsl 0.2.0 §6.4)
==================
<quest id="q">
  <objective id="o" done="run.d"/>
</quest>
---
(source_file
  (quest
    (attr (key) (string))
    (objective
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path))))))

==================
quest start/fail + objective when + on when — CEL-valued attrs (cel_key extension)
==================
<quest id="q" start="run.act == 1" fail="run.npc.halsin.dead">
  <objective id="o" done="run.d" visibleWhen="run.w"/>
  <on event="questComplete" when="run.act == 1">
    ::set{user.xp += 1}
  </on>
</quest>
---
(source_file
  (quest
    (attr (key) (string))
    (cel_attr (cel_key) (cel_string (path)))
    (cel_attr (cel_key) (cel_string (path)))
    (objective
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path)))
      (cel_attr (cel_key) (cel_string (path))))
    (on
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path)))
      (set (path) (assign_op) (cel_expr)))))

==================
quest rearm + beat spentBy — CEL-valued attrs (dsl 0.27.0 §5)
==================
<quest id="harvestMissions" start=@harvestLive rearm=@harvestLive tier="season:harvest">
  <objective id="o" done="run.d"/>
</quest>
<beat id="valves" on="hubVisit" spentBy="run.solved">
  @narrator: The valves hiss.
</beat>
---
(source_file
  (quest
    (attr (key) (string))
    (cel_attr (cel_key) (ref))
    (cel_attr (cel_key) (ref))
    (attr (key) (string))
    (objective
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path)))))
  (beat
    (attr (key) (string))
    (cel_attr (cel_key) (cel_string))
    (cel_attr (cel_key) (cel_string (path)))
    (line (speaker) (text))))

==================
multiple top-level quests (source_file admits repeated quest, mirrors shot)
==================
<quest id="a">
  <objective id="o1" done="run.a"/>
</quest>
<quest id="b">
  <objective id="o2" done="run.b"/>
</quest>
---
(source_file
  (quest
    (attr (key) (string))
    (objective
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path)))))
  (quest
    (attr (key) (string))
    (objective
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path))))))

==================
quest-level rewards + objective-level reward (dsl 0.16.0 §2 owner-scoped)
==================
<quest id="anonLook" start="run.act == 1">
  <reward kind="EXP_ACCOUNT" amount="80"/>
  <reward kind="ITEM" target="empty_milk_carton" amount="-5"/>
  <reward kind="SHARD" amount="1..5" when="quest.anonLook.objectives.bonus.done"/>
  <reward kind="SHARD" amount="2" outcome="failed"/>
  <objective id="collect" done="run.d">
    <reward kind="SHARD" amount="1"/>
  </objective>
</quest>
---
(source_file
  (quest
    (attr (key) (string))
    (cel_attr (cel_key) (cel_string (path)))
    (reward
      (attr (key) (string))
      (attr (key) (string)))
    (reward
      (attr (key) (string))
      (attr (key) (string))
      (attr (key) (string)))
    (reward
      (attr (key) (string))
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path))))
    (reward
      (attr (key) (string))
      (attr (key) (string))
      (attr (key) (string)))
    (objective
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path)))
      (reward
        (attr (key) (string))
        (attr (key) (string))))))

==================
non-self-closing <reward> body is a parse error (dsl 0.16.0 §2, always self-closing)
:error
==================
<quest id="q">
  <reward kind="SHARD"></reward>
</quest>
---
